# muya

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.claude/agent-memory/: _standup.md
.claude/agent-memory/mcp-developer/: journal.md  memory.md
docs/: handoff-2026-06-21.md  prd-apex-mission-control.progress.md  prd-claude-remote-bridge.md  prd-terminal-path-links.md  vault-setup.md
docs/adr/: 0001-grid-view-terminals.md  claude-remote-bridge-architecture.md
docs/prd-verify/: .gitignore  change-index.md  check-results-faz-0-prep.json  check-results-faz-0-terminal-refactor.json  check-results-faz-1-local-mvp.json  check-results-faz-1-vault-integration.json  check-results-faz-2-remote-mtls.json  check-results-faz-3-task-handoff.json  run-report-2026-06-30-1035.md  run-report-2026-07-15-1938.md  state.json  step-output-faz-0-prep.md  step-output-faz-0-terminal-refactor.md  step-output-faz-1-local-mvp.md  step-output-faz-1-vault-integration.md  step-output-faz-2-remote-mtls.md  step-output-faz-3-task-handoff.md
scripts/: build-sign-notarize.sh  publish-release.sh  setup-vault.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  bridge.rs  bridge_exec.rs  bridge_remote.rs  fs.rs  history.rs  lib.rs  main.rs  pm.rs  pty.rs  validate.rs  vault.rs
src/components/: BranchDAG.tsx  ChatView.test.tsx  ChatView.tsx  CreateWithClaudeModal.test.tsx  CreateWithClaudeModal.tsx  FileEditor.tsx  FileTree.tsx  MarkdownViewer.test.ts  MarkdownViewer.tsx  NewAgentModal.test.tsx  NewAgentModal.tsx  PrdBoard.tsx  QueuePage.tsx  ResourcesPage.tsx  ScheduledPromptModal.test.tsx  ScheduledPromptModal.tsx  SessionsPage.tsx  SessionsPanel.test.tsx  SessionsPanel.tsx  Terminal.tsx  VaultConfigPanel.test.tsx  VaultConfigPanel.tsx
src/lib/: blink.test.ts  blink.ts  tabs.test.ts  tabs.ts
