[package]
name = "apex-mission-control"
version = "0.0.8"
description = "Apex Mission Control — control plane for parallel Claude Code agents"
authors = ["staunch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "apex_mission_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
tauri-plugin-dialog = "2.7.1"
sysinfo = "0.38.4"
notify = "8.2.0"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.19"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.27.0"

