[package]
name = "muya"
version = "0.1.9"
description = "Muya — control plane for parallel Claude Code agents"
authors = ["staunch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "muya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
tauri-plugin-dialog = "2.7.1"
sysinfo = "0.38.4"
notify = "8.2.0"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.19"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "time", "sync", "net", "macros"] }
rustls = "0.23"
tokio-rustls = "0.26"
dirs-next = "2"
# Faz 2 — remote mTLS + CPace pairing
rcgen = { version = "0.14.8", features = ["pem"] }
# Identity keypair generation (Ed25519 via rcgen/ring)
# PAKE: spake2-conflux 0.6.0 (RustCrypto lineage, RFC 9382 SPAKE2, actively maintained).
# ADR R7 note: the `cpace` crate (0.1.0) exists but is unmaintained (last published ~2021,
# very low downloads). SPAKE2 is the sister CFRG balanced PAKE (RFC 9382); the RustCrypto
# implementation is audited and widely deployed. We use SPAKE2 and document the deviation
# from the ADR's CPace preference — the security properties (balanced PAKE, active-MITM-
# resistant with short PIN, offline-dictionary-proof) are identical.
spake2-conflux = { version = "0.6.0", features = ["std"] }
sha2 = "0.11.0"
hkdf = "0.13.0"
rand = "0.9"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# Faz 3: sandbox TempDir for task execution cwd isolation
tempfile = "3.27.0"

[dev-dependencies]
tempfile = "3.27.0"

